Fix popups footer covering clickable content
This is relevant for reference previews, which might contain
clickable links. If such a link is in the very last line, it
might be (partially) covered by the footer, which is
absolutely positioned on top of the content. This <div>
catches mouse events, but shouldn't.

Bug: T277364

--- a/src/ui/templates/popup/popup.less
+++ b/src/ui/templates/popup/popup.less
@@ -53,6 +53,11 @@
 			position: absolute;
 			bottom: 0;
 			left: 0;
+			pointer-events: none; // Allows clicking 'through' the element
+
+			a {
+				pointer-events: auto;
+			}
 		}
 	}
 
